--- a/app/views/documents/privacy_policy.html.erb
+++ b/app/views/documents/privacy_policy.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)https://www.NewsNippet.com/privacy/ -->
+<!-- saved from url=(0034)https://www.NEWSNIPPET.com/privacy/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="width=320,initial-scale=1.0,minimum-scale=1.0">
-  <title>NewsNippet Privacy Policy</title>
+  <title>NEWSNIPPET Privacy Policy</title>
 <style data-jss="" data-meta="MuiDialog">
 @media print {
   .MuiDialog-root {
@@ -123,10 +123,10 @@
 
       </a><section><a name="us">
 
-        <h1>NewsNippet Privacy Policy</h1>
+        <h1>NEWSNIPPET Privacy Policy</h1>
 
         <h2>Introduction</h2>
-        <p>Protecting your privacy is very important to NewsNippet. Our mission is delivering the world’s quality
+        <p>Protecting your privacy is very important to NEWSNIPPET. Our mission is delivering the world’s quality
           information to the people who need it and this should not come at the price of your privacy.</p>
 
         <h3>Scope</h3>
@@ -403,7 +403,7 @@
             <li>request that we restrict or limit our use of your personal information;</li>
             <li>request to opt-out of certain processing activities including, as applicable, if we process your
               personal information for “targeted advertising” (as “targeted advertising” is defined by applicable privacy laws), if we “sell” your personal information (as “sell” is defined by applicable privacy laws), or if we engage in profiling in furtherance of certain decisions that produce legal or similarly significant effects concerning you;</li>
-            <li>request erasure of personal information held about you by NewsNippet;</li>
+            <li>request erasure of personal information held about you by NEWSNIPPET;</li>
             <li>object to our processing of your personal information; and</li>
             <li>appeal our decision to decline to process your request.</li>
           </ul>
@@ -429,21 +429,21 @@
 
           <p>Please contact us at newsnippet.official@gmail.com if you have any questions about our Privacy Policy.</p>
 
-          <p style="margin-top: 3rem; font-size: 0.8rem; text-align: right;">NewsNippet<br>creator of NewsNippet Ko hasegawa</p>
+          <p style="margin-top: 3rem; font-size: 0.8rem; text-align: right;">NEWSNIPPET<br>creator of NEWSNIPPET Ko hasegawa</p>
 
       </div></section>
 
 
-          <h1>NewsNippetプライバシーポリシー</h1>
+          <h1>NEWSNIPPETプライバシーポリシー</h1>
 
           <h2>はじめに</h2>
           <p>
-            NewsNippetは、利用者のプライバシーを保護することを重視しています。私たちのミッションは、世界中の良質な情報を必要な人に送り届けることであり、そのミッションは利用者のプライバシーを犠牲にして達成されるべきではありません。
+            NEWSNIPPETは、利用者のプライバシーを保護することを重視しています。私たちのミッションは、世界中の良質な情報を必要な人に送り届けることであり、そのミッションは利用者のプライバシーを犠牲にして達成されるべきではありません。
           </p>
 
           <h3>適用範囲</h3>
-          NewsNippetプライバシーポリシー（以下「本ポリシー」といいます）は、NewsNippet（以下「我々」といいます）がどのような情報を取得し、それをどのように使用し、共有し、開示するかを説明するものです。
-          本ポリシーは、NewsNippet
+          NEWSNIPPETプライバシーポリシー（以下「本ポリシー」といいます）は、NEWSNIPPET（以下「我々」といいます）がどのような情報を取得し、それをどのように使用し、共有し、開示するかを説明するものです。
+          本ポリシーは、NEWSNIPPET
           のブランド、製品、アプリケーション、ウェブサイト及びサービスのうち、個別のプライバシーポリシーを持たないか、本ポリシーにリンクしているものすべて（以下「本サービス」といいます）に適用されます。
           本ポリシーは、第三者が提供するサービス（本サービスを通じて表示され又は本サービスからリンクしている記事、コンテンツ、サイトを含みます）には適用されません。
           我々が取り扱うすべての情報は、情報が取り扱われる時点で有効な本ポリシーに準拠するものとします。
@@ -642,9 +642,9 @@
 
           <ol id="ordered-brackets-list">
             <li class="numbered">
-              NewsNippetが直接提供するパーソナライズされた広告を停止する場合：
+              NEWSNIPPETが直接提供するパーソナライズされた広告を停止する場合：
               <br>
-              表示される広告を長押しして「NewsNippet Adsについて」を押してください。次のページに、本サービス上のパーソナライズされた広告を停止するためのリンクが表示されます。
+              表示される広告を長押しして「NEWSNIPPET Adsについて」を押してください。次のページに、本サービス上のパーソナライズされた広告を停止するためのリンクが表示されます。
             </li>
             <li class="numbered">
               Apple、Google、その他のモバイルOSの設定により広告を制限する場合：
@@ -652,7 +652,7 @@
               <a href="https://support.google.com/ads/answer/2662856" target="_blank">Android</a>、<a href="https://support.apple.com/ja-jp/guide/iphone/iphf60a6a256/ios" target="_blank">iOS</a>などの指示に従ってください。また、その他のモバイル端末向けOSでは、パーソナライズされた広告の配信を停止する方法が記載されている場合があります。
             </li>
             <li class="numbered">
-              NewsNippet以外の第三者がNewsNippetアプリ上で提供するパーソナライズされた広告を停止する場合：
+              NEWSNIPPET以外の第三者がNEWSNIPPETアプリ上で提供するパーソナライズされた広告を停止する場合：
               <br>
               各サービスのアカウント設定でパーソナライズされた広告を停止してください。特定のサービスにアカウントを持っていない場合は、そのサービスからパーソナライズされた広告は表示されない可能性が高いです。
             </li>
@@ -722,13 +722,13 @@
           <p>本ポリシーに関するお問い合わせは、newsnippet.official@gmail.com 宛にお願いいたします。</p>
 
           <p style="margin-top: 3rem; font-size: 0.8rem;">
-            個人情報取扱事業者に関する情報：<br>NewsNippet運営<br>代表 長谷川航</p>
+            個人情報取扱事業者に関する情報：<br>NEWSNIPPET運営<br>代表 長谷川航</p>
           <p style="margin-top: 3rem; font-size: 0.8rem;">
         </section>
 
   </div>
 
-  <script async="" src="./NewsNippet Privacy Policy_files/js"></script>
+  <script async="" src="./NEWSNIPPET Privacy Policy_files/js"></script>
   <script type="text/javascript">
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
